--- a/yxdtyut-security-browser/src/main/resources/static/yxdtyut-signIn.html
+++ b/yxdtyut-security-browser/src/main/resources/static/yxdtyut-signIn.html
@@ -7,8 +7,10 @@
 <body>
     <h2>标准登陆</h2>
     <form action="/authorization/login" method="post">
-        用户名：<input type="text" name="username"><br>
-        密码：<input type="password" name="password"><br>
+        用户名：<input type="text" name="username"><br/>
+        密码：<input type="password" name="password"><br/>
+        验证码:<input type="text" name="imageCode"><img src="/image/code"><br/>
+        记住我:<input type="checkbox" name="remember-me" ><br/>
         <input type="submit" value="登陆">
     </form>
 </body>
