--- a/yxdtyut-security-browser/src/main/resources/static/yxdtyut-signIn.html
+++ b/yxdtyut-security-browser/src/main/resources/static/yxdtyut-signIn.html
@@ -9,8 +9,17 @@
     <form action="/authorization/login" method="post">
         用户名：<input type="text" name="username"><br/>
         密码：<input type="password" name="password"><br/>
-        验证码:<input type="text" name="imageCode"><img src="/image/code"><br/>
+        验证码:<input type="text" name="imageCode"><img src="/code/image"><br/>
         记住我:<input type="checkbox" name="remember-me" ><br/>
+        <input type="submit" value="登陆">
+    </form>
+
+    <h2>短信登陆</h2>
+    <form action="/authorization/sms" method="post">
+        手机号：<input type="text" name="mobile" value="13222221111"><br/>
+        验证码：<input type="password" name="password">
+        <a href="/code/sms?mobile=13222221111">发送验证码</a>
+        <br/>
         <input type="submit" value="登陆">
     </form>
 </body>
