短信登陆功能开发

--- a/yxdtyut-security-browser/src/main/resources/static/yxdtyut-signIn.html
+++ b/yxdtyut-security-browser/src/main/resources/static/yxdtyut-signIn.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>标准登陆</h2>
-    <form action="/authorization/login" method="post">
+    <form action="/authentication/login" method="post">
         用户名：<input type="text" name="username"><br/>
         密码：<input type="password" name="password"><br/>
         验证码:<input type="text" name="imageCode"><img src="/code/image"><br/>
@@ -15,9 +15,9 @@
     </form>
 
     <h2>短信登陆</h2>
-    <form action="/authorization/sms" method="post">
+    <form action="/authentication/mobile" method="post">
         手机号：<input type="text" name="mobile" value="13222221111"><br/>
-        验证码：<input type="password" name="password">
+        验证码：<input type="text" name="smsCode">
         <a href="/code/sms?mobile=13222221111">发送验证码</a>
         <br/>
         <input type="submit" value="登陆">
