QQ和微信登陆的开发

--- a/yxdtyut-security-browser/src/main/resources/static/yxdtyut-signIn.html
+++ b/yxdtyut-security-browser/src/main/resources/static/yxdtyut-signIn.html
@@ -22,5 +22,9 @@
         <br/>
         <input type="submit" value="登陆">
     </form>
+
+    <h2>社交登陆</h2>
+    <a href="/qqLogin/callback.do">QQ登陆</a><br>
+    <a href="/qqLogin/weixin">微信登陆</a>
 </body>
 </html>
