--- a/yxdtyut-security-demo/src/main/resources/static/demo-logout.html
+++ b/yxdtyut-security-demo/src/main/resources/static/demo-logout.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>demo退出页</title>
 </head>
 <body>
-<h1>index</h1>
-<a href="/logout">退出</a>
+    <h1>DEMO退出成功</h1>
 </body>
 </html>
